--- a/react-master/package.json
+++ b/react-master/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && pip install -r requirements.txt && cd ./app/api && python3 index.py",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "npm run build && npm install flask && cd ./app/api && python3 index.py"
+    "deploy": "npm run build && cd ./app/api && python3 index.py"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
