--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   ],
   "routes": [
     {
-      "src": "/api/predict",
+      "src": "/api",
       "dest": "react-master/app/api/index.py"
     }
   ]
